crates/rehearse/tests/ui/operation/fail/generic_function.stderr
error: generic operation functions are not supported yet
 --> tests/ui/operation/fail/generic_function.rs:7:13
  |
7 | async fn bad<T>(value: T) -> Result<T, Error> {
  |             ^^^
